--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: black;
-    font-family: Verdana, sans-serif;
+    font-family: Verdana, Arial, sans-serif;
     text-align: center;
 }
 
